# final-project-skillbox

./: README.md
search_engine/: CMakeLists.txt
search_engine/libraries/nlohmann_json/: ChangeLog.md
search_engine/libraries/nlohmann_json/docs/mkdocs/docs/api/basic_json/: find.md
search_engine/libraries/nlohmann_json/include/nlohmann/detail/: json_pointer.hpp  string_escape.hpp
search_engine/libraries/nlohmann_json/tests/reports/2016-09-09-nativejson_benchmark/: conformance_Nlohmann (C++11).md
search_engine/res/: answers.json  config.json  file006.txt  file007.txt  file009.txt  file010.txt  requests.json
search_engine/search_engine/: CMakeLists.txt
search_engine/search_engine/headers/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
search_engine/search_engine/src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
search_engine/tests/: CMakeLists.txt
search_engine/tests/res/: answers.json  answers2.json  config.json  file001.txt  file002.txt  file003.txt  file004.txt  file005.txt  file008.txt  requests.json
search_engine/tests/tst_ConverterJSON/: CMakeLists.txt  answers.json  tst_ConverterJSON.cpp
search_engine/tests/tst_InvertedIndex/: CMakeLists.txt  tst_InvertedIndex.cpp
search_engine/tests/tst_SearchServer/: CMakeLists.txt  tst_SearchServer.cpp
